# medicare_lds_connector

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
notebooks/analysis/: .env  config.py  ed_classification.ipynb  environment.yml  hccs.ipynb  medical_claim.ipynb  pmpm.ipynb  snowflake_conn.py  svc_cat_grouper.ipynb
notebooks/embeddings/: emb.ipynb  embed_func.py
notebooks/snowflake_conn/: .env  load_data_to_snowflake.py  snowflake_helpers.py
