[tool.poetry]
name = "medicare-lds-connector"
version = "0.1.0"
description = ""
authors = ["lwarrenburg <lindsay.a.warrenburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-snowflake = "^1.6.2"
keyring = "^24.2.0"
snowflake-sqlalchemy = "^1.5.0"
pandas = ">=1.0.0,<2.1.0"
python-dotenv = "^1.0.0"
snowflake-connector-python = {extras = ["pandas"], version = "^3.2.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
